--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -6,7 +6,7 @@
 
 /*! normalize.css v3.0.0 | MIT License | git.io/normalize */
 html {
-  font-family: 'Lato', sans-serif;
+  font-family: 'Actor', sans-serif;
   -ms-text-size-adjust: 100%;
   -webkit-text-size-adjust: 100%;
 }
@@ -271,7 +271,7 @@ html {
   -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
 }
 body {
-  font-family: 'Lato', Tahoma, 'Trebuchet MS', "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-family: 'Actor', Tahoma, 'Trebuchet MS', "Helvetica Neue", Helvetica, Arial, sans-serif;
   font-size: 14px;
   line-height: 1.5;
 
