--- a/css/offcanvas.css
+++ b/css/offcanvas.css
@@ -15,6 +15,10 @@ footer {
   padding: 30px 0;
 }
 
+
+img {
+        object-fit: contain;
+}
 .tab-bar
   {
   background: none repeat scroll 0% 0% #ffffee !important;
@@ -67,6 +71,5 @@ footer {
     
     background: #fff4ee;
   }
-
   
 }
